Fix navbar overlap of main content.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+main {
+  padding-top: 70px;
+  padding-bottom: 20px;
+}
+
 #feedback {
   border: 1px solid black;
   padding: 1em;
